<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_margin="8dp"
    android:background="#EEEEEE">

    <TextView
        android:id="@+id/txtTituloTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtDescripcionTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion" />

    <TextView
        android:id="@+id/txtCursoTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curso" />

    <TextView
        android:id="@+id/txtFechaLimiteTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_limite" />

    <TextView
        android:id="@+id/txtEstadoTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estado" />

    <Button
        android:id="@+id/btnCompletarTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marcar_completada" />


    <Button
        android:id="@+id/btnEditarTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Editar" />

    <Button
        android:id="@+id/btnEliminarTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Eliminar" />

</LinearLayout>